[package]
name = "bevy_mod_picking"
version = "0.4.1-alpha.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A 3D mouse picking and raycasting plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "raycast"]
categories = ["game-engines", "rendering"]
resolver = "2"

[dependencies]
bevy = { version = "0.6", default-features = false, features = ["render"] }
bevy_mod_raycast = { git = "https://github.com/johanhelsing/bevy_mod_raycast", branch = "bevy-0.6" }

[dev-dependencies]
bevy = { version = "0.6", default-features = false, features = [
    "render",
    "bevy_winit",
    "bevy_gltf",
    "x11",
    "jpeg",
] }
